Finish log in/log out

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,8 @@
 #two:
 #  name: MyString
 #  email: MyString
+
+felix:
+  name: felix
+  email: felix@testing.com
+  password_digest: <%= User.digest('111111') %>
